minor fix on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@ button {
   cursor: pointer;
 }
 
+.contact {
+  transition: background-color .2s ease-in-out, color .2s ease-in-out, opacity .4s ease-in-out;
+}
+
 .navbar {
   box-shadow: 0 0 50px rgba(0, 0, 0, .5);
 }
